# native_llama

./: .pubignore  CHANGELOG.md  LICENSE  README.md  fix_shaders.py  pubspec.yaml
android/: build.gradle.kts  settings.gradle.kts
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  build-info.cpp  native-lib.cpp
android/src/main/kotlin/com/timebox/native_llama/: NativeLlamaPlugin.kt
android/src/test/kotlin/com/timebox/native_llama/: NativeLlamaPluginTest.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/timebox/native_llama_example/: MainActivity.kt
example/android/app/src/main/res/xml/: provider_paths.xml
example/ios/: Podfile
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/lib/core/bindings/: initial_binding.dart
example/lib/core/models/: chat_model.dart  document_model.dart
example/lib/core/services/: database_service.dart  llama_service.dart  semantic_cache_service.dart
example/lib/core/theme/: app_theme.dart
example/lib/features/assistant/controller/: assistant_controller.dart
example/lib/features/assistant/view/: assistant_view.dart
example/lib/features/home/controller/: home_controller.dart
example/lib/features/home/view/: home_view.dart
example/lib/features/settings/controller/: settings_controller.dart
example/lib/features/settings/view/: settings_view.dart
ios/: native_llama.podspec
ios/Classes/: LlamaBridge.h  LlamaBridge.mm  NativeLlamaPlugin.swift  build-info.cpp
ios/shared_cpp/ggml/src/ggml-cpu/: ops.h
ios/shared_cpp/ggml/src/ggml-cpu/kleidiai/: kernels.cpp
ios/shared_cpp/ggml/src/ggml-metal/: ggml-metal-device.m
ios/shared_cpp/src/: llama-arch.h
ios/shared_cpp/src/models/: models.h
ios/shared_cpp/tools/mtmd/: mtmd-audio.cpp
ios/shared_cpp_copy/common/: CMakeLists.txt
ios/shared_cpp_copy/ggml/src/ggml-cpu/kleidiai/: kleidiai.cpp
ios/shared_cpp_copy/src/: llama-arch.cpp
ios/shared_cpp_copy/src/models/: lumina2.cpp
lib/: native_llama.dart
shared_cpp/ggml/src/ggml-vulkan/: test.cpp  test.cpp.d
shared_cpp/ggml/src/ggml-vulkan/vulkan-shaders/: vulkan-shaders-gen.cpp
shared_cpp/ggml/src/ggml-vulkan/vulkan-shaders-spv/: dequant_iq1_m.spv  get_rows_iq1_m.spv  get_rows_iq1_m_f32.spv  matmul_id_q4_k_f16.spv  matmul_id_q4_k_f16_aligned.spv  matmul_id_q4_k_f16_aligned_f16acc.spv  matmul_id_q4_k_f16_aligned_fp32.spv  matmul_id_q4_k_f16_f16acc.spv  matmul_id_q4_k_f16_fp32.spv  matmul_id_q4_k_f32.spv  matmul_id_q4_k_f32_aligned.spv  matmul_id_q4_k_f32_aligned_f16acc.spv  matmul_id_q4_k_f32_aligned_fp32.spv  matmul_id_q4_k_f32_f16acc.spv  matmul_id_q4_k_f32_fp32.spv  matmul_id_q5_k_f16.spv  matmul_id_q5_k_f16_aligned.spv  matmul_id_q5_k_f16_aligned_f16acc.spv  matmul_id_q5_k_f16_aligned_fp32.spv  matmul_id_q5_k_f16_f16acc.spv  matmul_id_q5_k_f16_fp32.spv  matmul_id_q5_k_f32.spv  matmul_id_q5_k_f32_aligned.spv  matmul_id_q5_k_f32_aligned_f16acc.spv  matmul_id_q5_k_f32_aligned_fp32.spv  matmul_id_q5_k_f32_f16acc.spv  matmul_id_q5_k_f32_fp32.spv  matmul_id_subgroup_q4_k_f16.spv  matmul_id_subgroup_q4_k_f16_aligned.spv  matmul_id_subgroup_q4_k_f16_aligned_f16acc.spv  matmul_id_subgroup_q4_k_f16_aligned_fp32.spv  matmul_id_subgroup_q4_k_f16_f16acc.spv  matmul_id_subgroup_q4_k_f16_fp32.spv  matmul_id_subgroup_q4_k_f32.spv  matmul_id_subgroup_q4_k_f32_aligned.spv  matmul_id_subgroup_q4_k_f32_aligned_f16acc.spv  matmul_id_subgroup_q4_k_f32_aligned_fp32.spv  matmul_id_subgroup_q4_k_f32_f16acc.spv  matmul_id_subgroup_q4_k_f32_fp32.spv  matmul_id_subgroup_q5_k_f16.spv  (+45 more)
shared_cpp/src/: llama-model.cpp
shared_cpp/tools/mtmd/: mtmd-audio.cpp
